--- a/Resources/views/Default/_nav.html.twig
+++ b/Resources/views/Default/_nav.html.twig
@@ -1,6 +1,7 @@
 
 
 <nav>
+	<span class="leftMenuTitle">Orders</span>
 	<ul>
 
 		<li><a href="{{ path('maci_order_homepage') }}">My Orders</a></li>
