--- a/Resources/views/Default/_list.html.twig
+++ b/Resources/views/Default/_list.html.twig
@@ -25,7 +25,7 @@
 
 	<div class="col-xs-4">
 
-		{% if item.status == 'confirmed' %}
+		{% if item.status == 'confirm' %}
 
 		<a href="{{ path('maci_order_invoice', {'id': item.id}) }}">
 			Show Invoice
