--- a/Resources/views/Default/_paypal.html.twig
+++ b/Resources/views/Default/_paypal.html.twig
@@ -7,6 +7,7 @@
 
 	<input type="hidden" name="item_name" value="{{ form.item_name.vars.value }}">
 	<input type="hidden" name="item_number" value="{{ form.item_number.vars.value }}">
+	<input type="hidden" name="custom" value="{{ form.custom.vars.value }}">
 
 	<input type="hidden" name="amount" value="{{ form.amount.vars.value }}">
 	<input type="hidden" name="currency_code" value="{{ form.currency_code.vars.value }}">
@@ -20,8 +21,10 @@
 	<input type="hidden" name="cancel_return" value="{{ form.cancel_return.vars.value }}">
 	<input type="hidden" name="notify_url" value="{{ form.notify_url.vars.value }}">
 
+	<input class="btn btn-success" type="submit" value="Pay With PayPal" />
+{#}
 	<input type="image" src="https://www.paypalobjects.com/it_IT/IT/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - Il metodo rapido, affidabile e innovativo per pagare e farsi pagare.">
 
 	<img alt="" border="0" src="https://www.paypalobjects.com/it_IT/i/scr/pixel.gif" width="1" height="1">
-
+{#}
 </form>
