--- a/Resources/views/Default/cart.html.twig
+++ b/Resources/views/Default/cart.html.twig
@@ -13,7 +13,8 @@
 {% if cart and cart.items|length %}
 
 <br/><br/><br/>
-<a href="{{ path('maci_order_cart_checkout') }}" class="btn btn-default">Checkout</a>
+
+<a href="{{ path('maci_order_checkout', {'id': cart.id}) }}" class="btn btn-default">Checkout</a>
 
 {% endif %}
 
