--- a/Resources/views/Default/_list.html.twig
+++ b/Resources/views/Default/_list.html.twig
@@ -25,7 +25,7 @@
 
 	<div class="col-xs-4">
 
-		{% if item.status == 'confirm' %}
+		{% if item.status == 'complete' %}
 
 		<a href="{{ path('maci_order_invoice', {'id': item.id}) }}">
 			Show Invoice
@@ -46,9 +46,7 @@
 {% else %}
 
 <div class="row">
-
-	<p>No orders.</p>
-
+	<h3 class="noitems">No Items.</h3>
 </div>
 
 {% endfor %}
