--- a/Resources/views/Default/_nav.html.twig
+++ b/Resources/views/Default/_nav.html.twig
@@ -4,7 +4,7 @@
 	<span class="leftMenuTitle">Orders</span>
 	<ul>
 
-		<li><a href="{{ path('maci_order_homepage') }}">My Orders</a></li>
+		<li><a href="{{ path('maci_order') }}">My Orders</a></li>
 
 	</ul>
 </nav>
