--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,10 +1,2 @@
 
-
-{% extends "MaciHelloBundle::layout.html.twig" %}
-
-
-{% block leftMenu %}
-
-	{% include "MaciOrderBundle:Default:_nav.html.twig" %}
-
-{% endblock %}
+{% extends "FOSUserBundle::layout.html.twig" %}
