--- a/Resources/views/Default/invoice.html.twig
+++ b/Resources/views/Default/invoice.html.twig
@@ -2,12 +2,22 @@
 {% extends "MaciOrderBundle::layout.html.twig" %}
 
 
+{% block title %}
+
+<title>{{ 'order.invoice.meta_title' | matra }}</title>
+
+{% endblock %}
+
+{% block description %}
+
+<meta name="description" content="{{ 'order.invoice.meta_description' | matra }}" />
+
+{% endblock %}
+
 
 {% block content %}
 
-
 {% include "MaciOrderBundle:Default:_invoice.html.twig" with { 'order': order } %}
-
 
 {% endblock %}
 
