--- a/Resources/views/Default/preview.html.twig
+++ b/Resources/views/Default/preview.html.twig
@@ -2,9 +2,20 @@
 {% extends "MaciOrderBundle::layout.html.twig" %}
 
 
+{% block title %}
+
+<title>{{ 'order.preview.meta_title' | matra }}</title>
+
+{% endblock %}
+
+{% block description %}
+
+<meta name="description" content="{{ 'order.preview.meta_description' | matra }}" />
+
+{% endblock %}
+
 
 {% block content %}
-
 
 <h3>Order Preview:</h3>
 
@@ -16,8 +27,5 @@
 
 {% endif %}
 
-
 {% endblock %}
-
-
 
