--- a/Resources/views/Default/cart.html.twig
+++ b/Resources/views/Default/cart.html.twig
@@ -2,9 +2,20 @@
 {% extends "MaciOrderBundle::layout.html.twig" %}
 
 
+{% block title %}
+
+<title>{{ 'order.cart.meta_title' | matra }}</title>
+
+{% endblock %}
+
+{% block description %}
+
+<meta name="description" content="{{ 'order.cart.meta_description' | matra }}" />
+
+{% endblock %}
+
 
 {% block content %}
-
 
 <h3>Cart:</h3>
 
