--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -31,10 +31,14 @@
 
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
 		<p>
 			{{ item.product.price }} &euro;
 		</p>
+	</div>
+
+	<div class="col-xs-1">
+		<a class="btn btn-danger" href="{{ path('maci_order_remove_cart_item', {'id': item.id}) }}">Remove</a>
 	</div>
 
 </div>
