--- a/Resources/views/Default/checkout.html.twig
+++ b/Resources/views/Default/checkout.html.twig
@@ -15,7 +15,7 @@
 {% endblock %}
 
 
-{% block content %}
+{% block container %}
 
 {% include "MaciOrderBundle:Default:_checkout.html.twig" with {
 	'checkout': checkout,
