--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -16,9 +16,16 @@
 	</div>
 
 	<div class="col-xs-3">
-		<p>
-			{{ item.quantity }}
-		</p>
+		{% if edit is defined and edit %}
+		<form class="form-inline" action="{{ path('maci_order_edit_cart_item', {'id': item.id}) }}" method="post">
+			<div class="form-group">
+				<input type="text" class="form-control edit-quantity-field" name="quantity"  value="{{ item.quantity }}" />
+				<input type="submit" class="btn btn-success" value="Edit" />
+			</div>
+		</form>
+		{% else %}
+		<p>{{ item.quantity }}</p>
+		{% endif %}
 	</div>
 
 	<div class="col-xs-3">
