--- a/Resources/views/Default/_list.html.twig
+++ b/Resources/views/Default/_list.html.twig
@@ -31,6 +31,10 @@
 			Show Invoice
 		</a>
 
+		{% elseif item.status == 'confirmed' %}
+
+		&nbsp;
+
 		{% else %}
 
 		<a href="{{ path('maci_order_checkout', {'id': item.id}) }}">
