--- a/Resources/views/Default/complete.html.twig
+++ b/Resources/views/Default/complete.html.twig
@@ -17,7 +17,7 @@
 
 {% block content %}
 
-{% include "MaciOrderBundle:Default:_complete.html.twig" with { 'order': order } %}
+{% include "MaciOrderBundle:Default:_complete.html.twig" %}
 
 {% endblock %}
 
