--- a/Resources/views/Default/_invoice.html.twig
+++ b/Resources/views/Default/_invoice.html.twig
@@ -56,12 +56,7 @@
 
 			<h4>Pay To:</h4>
 
-			<address>
-				<strong>Mah! S.r.l.</strong><br>
-				Via Delle Vie 88<br>
-				Lido di Jesolo, VE 30016<br>
-				<abbr title="Phone">Tel.</abbr> 0123456789
-			</address>
+			{% include "MaciPageBundle:Default:_contacts.html.twig" } %}
 
 		</td>
 	</tr>
