--- a/Resources/views/Default/preview.html.twig
+++ b/Resources/views/Default/preview.html.twig
@@ -4,13 +4,7 @@
 
 {% block title %}
 
-<title>{{ 'order.preview.meta_title' | matra }}</title>
-
-{% endblock %}
-
-{% block description %}
-
-<meta name="description" content="{{ 'order.preview.meta_description' | matra }}" />
+<title>{{ 'order.preview.meta_title' | matra('Order Preview') }}</title>
 
 {% endblock %}
 
