--- a/Resources/views/Default/cart.html.twig
+++ b/Resources/views/Default/cart.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}
 
-<title>{{ 'order.cart.meta_title' | matra('My Cart') }}</title>
+{{ 'order.cart.meta_title' | matra('My Cart') }}
 
 {% endblock %}
 
