--- a/Resources/views/Default/checkout.html.twig
+++ b/Resources/views/Default/checkout.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}
 
-<title>{{ 'order.checkout.meta_title' | matra('Order Checkout') }}</title>
+{{ 'order.checkout.meta_title' | matra('Order Checkout') }}
 
 {% endblock %}
 
