--- a/Resources/views/Default/complete.html.twig
+++ b/Resources/views/Default/complete.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}
 
-<title>{{ 'order.complete.meta_title' | matra('Order Complete') }}</title>
+{{ 'order.complete.meta_title' | matra('Order Complete') }}
 
 {% endblock %}
 
