--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}
 
-<title>{{ 'order.index.meta_title' | matra('Order List') }}</title>
+{{ 'order.index.meta_title' | matra('Order List') }}
 
 {% endblock %}
 
