--- a/Resources/views/Default/notfound.html.twig
+++ b/Resources/views/Default/notfound.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}
 
-<title>{{ 'order.notfound.meta_title' | matra('Order Not Found!') }}</title>
+{{ 'order.notfound.meta_title' | matra('Order Not Found!') }}
 
 {% endblock %}
 
