--- a/Resources/views/Default/preview.html.twig
+++ b/Resources/views/Default/preview.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}
 
-<title>{{ 'order.preview.meta_title' | matra('Order Preview') }}</title>
+{{ 'order.preview.meta_title' | matra('Order Preview') }}
 
 {% endblock %}
 
