--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -7,41 +7,38 @@
 
 <div class="row">
 
-	<div class="col-xs-3">
+	<div class="col-xs-6">
 
-	<a href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
-		{{ item.product }}
-	</a>
+		<a class="order-item-name" href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
+			{{ item.product }}
+		</a>
+
+		{% for variant in item.variants %}
+
+		<br/>
+		<span class="order-item-variant">- {{ variant }}</span>
+
+		{% endfor %}
 
 	</div>
 
 	<div class="col-xs-3">
 		{% if edit is defined and edit %}
-		<form class="form-inline" action="{{ path('maci_order_edit_cart_item', {'id': item.id}) }}" method="post">
+		<form class="form-inline order-item-form" action="{{ path('maci_order_edit_cart_item', {'id': item.id}) }}" method="post">
 			<div class="form-group">
 				<input type="text" class="form-control edit-quantity-field" name="quantity"  value="{{ item.quantity }}" />
 				<input type="submit" class="btn btn-success" value="Edit" />
 			</div>
 		</form>
 		{% else %}
-		<p>{{ item.quantity }}</p>
+		<span class="order-item-quantity">{{ item.quantity }}</span>
 		{% endif %}
 	</div>
 
-	<div class="col-xs-3">
-
-		{% for variant in item.variants %}
-
-		<span>{{ variant }}</span>
-
-		{% endfor %}
-
-	</div>
-
 	<div class="col-xs-2">
-		<p>
-			{{ item.product.price }} &euro;
-		</p>
+		<span class="order-item-amount">
+			{{ item.amount }} &euro;
+		</span>
 	</div>
 
 	<div class="col-xs-1">
@@ -55,12 +52,20 @@
 
 <div class="row">
 
-	<div class="col-xs-8">
-
+	<div class="col-xs-6">
+		&nbsp;
 	</div>
 
-	<div class="col-xs-4">
-		<span>Amount: {{ order.amount }} &euro;</span>
+	<div class="col-xs-3">
+		<span class="order-amount-label">Amount:</span>
+	</div>
+
+	<div class="col-xs-2">
+		<span class="order-amount-value">{{ order.amount }} &euro;</span>
+	</div>
+
+	<div class="col-xs-1">
+		&nbsp;
 	</div>
 
 </div>
