--- a/Resources/views/Default/confirm.html.twig
+++ b/Resources/views/Default/confirm.html.twig
@@ -4,14 +4,14 @@
 
 {% block title %}
 
-{{ 'order.complete.meta_title' | matra('Order Complete') }}
+{{ 'order.complete.meta_title' | matra('Order Confirmed') }}
 
 {% endblock %}
 
 
 {% block content %}
 
-{% include "MaciOrderBundle:Default:_complete.html.twig" %}
+{% include "MaciOrderBundle:Default:_confirm.html.twig" %}
 
 {% endblock %}
 
