--- a/Resources/views/Default/cart.html.twig
+++ b/Resources/views/Default/cart.html.twig
@@ -11,17 +11,22 @@
 
 {% block content %}
 
+
 <h3>Cart:</h3>
 
 {% include "MaciOrderBundle:Default:_show.html.twig" with { 'order': cart, 'edit': true } %}
 
+
 {% if cart and cart.items|length %}
 
 <div class="row">
-	<a href="{{ path('maci_order_checkout', {'id': cart.id}) }}" class="btn btn-default">Checkout</a>
+	<a href="{{ path('maci_order_gocheckout', {'option': 'fast_checkout'}) }}" class="btn btn-default">Checkout</a>
+	or
+	<a href="{{ path('maci_order_gocheckout', {'option': 'booking'}) }}" class="btn btn-default">Pickup In Store</a>
 </div>
 
 {% endif %}
+
 
 {% endblock %}
 
