--- a/Resources/views/Default/_paypal.html.twig
+++ b/Resources/views/Default/_paypal.html.twig
@@ -1,5 +1,9 @@
 
-<form action="{{ form.vars.action }}" method="post" target="_top">
+<html>
+<head></head>
+<body>
+
+<form id="paypalform" action="{{ form.vars.action }}" method="post" target="_top">
 
 	<input type="hidden" name="cmd" value="{{ form.cmd.vars.value }}">
 	<input type="hidden" name="lc" value="{{ form.lc.vars.value }}">
@@ -21,10 +25,23 @@
 	<input type="hidden" name="cancel_return" value="{{ form.cancel_return.vars.value }}">
 	<input type="hidden" name="notify_url" value="{{ form.notify_url.vars.value }}">
 
-	<input class="btn btn-success" type="submit" value="Pay With PayPal" />
 {#}
+
+	<input class="btn btn-success" type="submit" value="Pay With PayPal" />
+
 	<input type="image" src="https://www.paypalobjects.com/it_IT/IT/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - Il metodo rapido, affidabile e innovativo per pagare e farsi pagare.">
 
 	<img alt="" border="0" src="https://www.paypalobjects.com/it_IT/i/scr/pixel.gif" width="1" height="1">
+
 {#}
+
 </form>
+
+<script type="text/javascript">
+
+paypalform.submit();
+
+</script>
+
+</body>
+</html>
