--- a/Resources/views/Default/_invoice.html.twig
+++ b/Resources/views/Default/_invoice.html.twig
@@ -86,7 +86,7 @@
 	    <tr>
 	        <td class="description" width="60%">Description</td>
 	        <td class="quantity" width="20%">Quantity</td>
-	        <td class="amount" width="20%">Amount</td>
+	        <td class="amount" width="20%">{{ 'order.amount' | matra('Amount') }}</td>
 	    </tr>
 	</thead>
 
