--- a/Resources/views/Default/_checkout.html.twig
+++ b/Resources/views/Default/_checkout.html.twig
@@ -1,9 +1,20 @@
 
+{% set i = 0 %}
+
 <div class="page">
+
 
 <section class="page_header page_container row">
 
-<h3>Checkout</h3>
+{% if order.checkout == 'pickup' %}
+
+<h3>{{ 'page.cart.pickup' | matra('Pickup In Store') }}</h3>
+
+{% else %}
+
+<h3>{{ 'page.cart.checkout' | matra('Checkout') }}</h3>
+
+{% endif %}
 
 </section>
 
@@ -20,12 +31,14 @@
 
 {% if checkout is defined and checkout %}
 
+{% if checkout.billing %} {# --- Billing ---  #}
+{% set i = i + 1 %}
 
-{% if checkout.billing == 'set' %} {# --- Billing ---  #}
+{% if checkout.billing == 'set' %}
 
 <section class="page_content page_container row active">
 
-	<h4>Billing</h4>
+	<h4>{{ i }} - {{ 'page.checkout.billing' | matra('Billing') }}</h4>
 
 	{% render(controller('MaciAddressBundle:Default:list', { 'select': path('maci_order_checkout_set_address', {'option': 'billing'}) } )) %}
 
@@ -49,11 +62,11 @@
 
 <section class="page_content page_container row setted">
 
-	<h4>Billing To:</h4>
+	<h4>{{ i }} - {{ 'page.checkout.billing_to' | matra('Billing To') }}</h4>
 
 	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.billing } %}
 
-	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'billing'}) }}" class="btn btn-success">Edit</a>
+	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'billing'}) }}" class="btn btn-success">{{ 'form.edit' | matra('Edit') }}</a>
 
 </section>
 
@@ -61,18 +74,23 @@
 
 <section class="page_content page_container row">
 
-	<h4>Set Billing</h4>
+	<h4>{{ i }} - {{ 'page.checkout.set_billing' | matra('Set Billing') }}</h4>
 
 </section>
+
+{% endif %}
 
 {% endif %} {# --- End Billing ---  #}
 
 
-{% if checkout.shipping == 'set' %} {# --- Shipping ---  #}
+{% if checkout.shipping %} {# --- Shipping ---  #}
+{% set i = i + 1 %}
+
+{% if checkout.shipping == 'set' %}
 
 <section class="page_content page_container row">
 
-	<h4>Shipping</h4>
+	<h4>{{ i }} - {{ 'page.checkout.shipping' | matra('Shipping') }}</h4>
 
 	{% render(controller('MaciAddressBundle:Default:list', { 'select': path('maci_order_checkout_set_address', {'option': 'shipping'}) } )) %}
 
@@ -86,11 +104,11 @@
 
 <section class="page_content page_container row setted">
 
-	<h4>Shipping To:</h4>
+	<h4>{{ i }} - {{ 'page.checkout.shipping_to' | matra('Shipping To') }}</h4>
 
 	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.shipping } %}
 
-	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'shipping'}) }}" class="btn btn-success">Edit</a>
+	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'shipping'}) }}" class="btn btn-success">{{ 'form.edit' | matra('Edit') }}</a>
 
 </section>
 
@@ -98,18 +116,23 @@
 
 <section class="page_content page_container row">
 
-	<h4>Set Shipping</h4>
+	<h4>{{ i }} - {{ 'page.checkout.set_shipping' | matra('Set Shipping') }}</h4>
 
 </section>
+
+{% endif %}
 
 {% endif %} {# --- End Shipping ---  #}
 
 
-{% if checkout.spedition == 'set' %} {# --- Spedition ---  #}
+{% if checkout.spedition %} {# --- Spedition ---  #}
+{% set i = i + 1 %}
+
+{% if checkout.spedition == 'set' %}
 
 <section class="page_content page_container row active">
 
-	<h4>Select Spedition</h4>
+	<h4>{{ i }} - {{ 'page.checkout.spedition' | matra('Select Spedition') }}</h4>
 
 	{% render(controller('MaciOrderBundle:Default:cartSetSpedition')) %}
 
@@ -119,21 +142,13 @@
 
 <section class="page_content page_container row setted">
 
-	<h4>Spedition:</h4>
+	<h4>{{ i }} - {{ 'page.checkout.spedition_to' | matra('Spedition') }}</h4>
 
-	{% if order.spedition == 'standard' %}
-	<span>Standard</span>
-	{% elseif order.spedition == 'express' %}
-	<span>Express</span>
-	{% elseif order.spedition == 'pickup' %}
-	<span>Pickup in Store</span>
-	{% else %}
-	<span>{{ order.spedition }}</span>
-	{% endif %}
+	<span>{{ order.speditionLabel }}</span>
 
 	<br/><br/>
 
-	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'spedition'}) }}" class="btn btn-success">Edit</a>
+	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'spedition'}) }}" class="btn btn-success">{{ 'form.edit' | matra('Edit') }}</a>
 
 </section>
 
@@ -141,18 +156,23 @@
 
 <section class="page_content page_container row">
 
-	<h4>Set Spedition</h4>
+	<h4>{{ i }} - {{ 'page.checkout.set_spedition' | matra('Set Spedition') }}</h4>
 
 </section>
+
+{% endif %}
 
 {% endif %} {# --- End Spedition ---  #}
 
 
-{% if checkout.payment == 'set' %} {# --- Payment ---  #}
+{% if checkout.payment %} {# --- Payment ---  #}
+{% set i = i + 1 %}
+
+{% if checkout.payment == 'set' %}
 
 <section class="page_content page_container row active">
 
-	<h4>Select Payment</h4>
+	<h4>{{ i }} - {{ 'page.checkout.payment' | matra('Select Payment') }}</h4>
 
 	{% render(controller('MaciOrderBundle:Default:cartSetPayment')) %}
 
@@ -162,22 +182,13 @@
 
 <section class="page_content page_container row setted">
 
-	<h4>Payment:</h4>
+	<h4>{{ i }} - {{ 'page.checkout.payment_to' | matra('Payment') }}</h4>
 
-
-	{% if order.payment == 'paypal' %}
-	<span>PayPal</span>
-	{% elseif order.payment == 'delivery' %}
-	<span>Cash On Delivery</span>
-	{% elseif order.payment == 'cash' %}
-	<span>Cash</span>
-	{% else %}
-	<span>{{ order.payment }}</span>
-	{% endif %}
+	<span>{{ order.paymentLabel }}</span>
 
 	<br/><br/>
 
-	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'payment'}) }}" class="btn btn-success">Edit</a>
+	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'payment'}) }}" class="btn btn-success">{{ 'form.edit' | matra('Edit') }}</a>
 
 </section>
 
@@ -185,20 +196,25 @@
 
 <section class="page_content page_container row">
 
-	<h4>Set Payment</h4>
+	<h4>{{ i }} - {{ 'page.checkout.set_payment' | matra('Set Payment') }}</h4>
 
 </section>
+
+{% endif %}
 
 {% endif %} {# --- End Payment ---  #}
 
 
-{% if checkout.confirm == 'set' %} {# --- Confirm ---  #}
+{% if checkout.confirm %} {# --- Confirm ---  #}
+{% set i = i + 1 %}
+
+{% if checkout.confirm == 'set' %}
 
 <section class="page_content page_container row active">
 
-	<h4>Confirm Order</h4>
+	<h4>{{ i }} - {{ 'page.checkout.confirm' | matra('Confirm Order') }}</h4>
 
-	<a href="{{ path('maci_order_checkout_confirm') }}" class="btn btn-primary">Confirm Order</a>
+	<a href="{{ path('maci_order_checkout_confirm') }}" class="btn btn-primary">{{ 'page.checkout.confirm' | matra('Confirm Order') }}</a>
 
 </section>
 
@@ -206,9 +222,11 @@
 
 <section class="page_content page_container row">
 
-	<h4>Confirm Order</h4>
+	<h4>{{ i }} - {{ 'page.checkout.confirm' | matra('Confirm Order') }}</h4>
 
 </section>
+
+{% endif %}
 
 {% endif %} {# --- End Confirm ---  #}
 
@@ -222,7 +240,7 @@
 
 <div class="row">
 
-	<p>No content.</p>
+	<p>{{ 'page.no_content' | matra('No Content.') }}</p>
 
 </div>
 
