--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -1,4 +1,8 @@
 
+<section class="cart-list">
+
+	<h3>{{ 'menu.user.cart' | matra('My Cart') }}:</h3>
+
 
 {% if order and order.items|length %}
 
@@ -15,9 +19,13 @@
 
 	<div class="col-xs-6">
 
+		{% if edit is defined and edit %}
 		<a class="order-item-name" href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
 			{{ item.product }}
 		</a>
+		{% else %}
+		<span class="order-item-name">{{ item.product }}</span>
+		{% endif %}
 
 		{% for variant in item.variants %}
 		<br/><span class="order-item-variant">- {{ variant }}</span>
@@ -30,7 +38,7 @@
 		<form class="form-inline order-item-form" action="{{ path('maci_order_edit_cart_item', {'id': id}) }}" method="post">
 			<div class="form-group">
 				<input type="text" class="form-control edit-quantity-field" name="quantity"  value="{{ item.quantity }}" />
-				<input type="submit" class="btn btn-success" value="Edit" />
+				<input type="submit" class="btn btn-success" value="{{ 'form.edit' | matra('Edit') }}" />
 			</div>
 		</form>
 		{% else %}
@@ -46,7 +54,7 @@
 
 	<div class="col-xs-1">
 		{% if edit is defined and edit %}
-		<a class="btn btn-danger" href="{{ path('maci_order_remove_cart_item', {'id': id}) }}">Remove</a>
+		<a class="btn btn-danger" href="{{ path('maci_order_remove_cart_item', {'id': id}) }}">{{ 'form.remove' | matra('Remove') }}</a>
 		{% endif %}
 	</div>
 
@@ -62,7 +70,7 @@
 	</div>
 
 	<div class="col-xs-3">
-		<span class="order-amount-label">Amount:</span>
+		<span class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</span>
 	</div>
 
 	<div class="col-xs-2">
@@ -75,6 +83,7 @@
 
 </div>
 
+
 {% else %}
 
 <div class="row">
@@ -82,4 +91,7 @@
 </div>
 
 {% endif %}
+
+
+</section>
 
