--- a/Resources/views/Default/_gocheckout.html.twig
+++ b/Resources/views/Default/_gocheckout.html.twig
@@ -1,2 +1,39 @@
 
-forms
+
+<div class="row">
+
+
+<div class="col-md-6">
+
+	<h3>{{ 'gocheckout.fast_checkout' | matra('Fast Checkout') }}</h3>
+
+	<p>{{ 'gocheckout.fast_checkout.description' | matra('Already a registered member? Login for faster checkout.') }}</p>
+
+	{% render url('fos_user_security_login') %}
+
+</div>
+
+
+<div class="col-md-6">
+
+	<h3>{{ 'gocheckout.new_users' | matra('New Users') }}</h3>
+
+	<p>{{ 'gocheckout.new_users.description' | matra("Enter your email address to proceed with purchase. We\'all only use your email to update you on this order.") }}</p>
+
+	{% render(controller('MaciOrderBundle:Default:cartSetMail')) %}
+
+	<h3>{{ 'gocheckout.sign_up' | matra('Sign Up') }}</h3>
+
+	<p>
+		{{ 'gocheckout.sign_up.description' | matra("Want to checkout faster? Sign up and get speedy checkout on future purchases.") }}
+	</p>
+
+	<a class="btn btn-success" href="{{ path('maci_user_register') }}">
+		{{ 'gocheckout.register_now' | matra('Register Now') }}
+	</a>
+
+</div>
+
+
+</div>
+
