--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -17,7 +17,31 @@
 
 <div class="row">
 
-	<div class="col-xs-6">
+	<div class="col-xs-3">
+		<span class="order-show-title">{{ 'product.item_name' | matra('Product Name') }}</span>
+	</div>
+
+	<div class="col-xs-3">
+		<span class="order-show-title">{{ 'product.variants' | matra('Variants') }}</span>
+	</div>
+
+	<div class="col-xs-4">
+		<span class="order-show-title">{{ 'product.quantity' | matra('Quantity') }}</span>
+	</div>
+
+	<div class="col-xs-2">
+		<span class="order-show-title">{{ 'product.price' | matra('Price') }}</span>
+	</div>
+
+	<div class="col-xs-1">
+		&nbsp;
+	</div>
+
+</div>
+
+<div class="row">
+
+	<div class="col-xs-3">
 
 		{% if edit is defined and edit %}
 		<a class="order-item-name" href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
@@ -27,20 +51,25 @@
 		<span class="order-item-name">{{ item.product }}</span>
 		{% endif %}
 
+	</div>
+
+	<div class="col-xs-3">
+
 		{% for variant in item.variants %}
-		<br/><span class="order-item-variant">- {{ variant }}</span>
+		<span class="order-item-variant">- {{ variant }}</span><br/>
 		{% endfor %}
 
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-4">
 		{% if edit is defined and edit %}
-		<form class="form-inline order-item-form" action="{{ path('maci_order_edit_cart_item', {'id': id}) }}" method="post">
+		<form class="form-inline order-item-quantity-form" action="{{ path('maci_order_edit_cart_item', {'id': id}) }}" method="post">
 			<div class="form-group">
 				<input type="text" class="form-control edit-quantity-field" name="quantity"  value="{{ item.quantity }}" />
 				<input type="submit" class="btn btn-success" value="{{ 'form.edit' | matra('Edit') }}" />
 			</div>
 		</form>
+		<a class="btn btn-danger" href="{{ path('maci_order_remove_cart_item', {'id': id}) }}">{{ 'form.remove' | matra('Remove') }}</a>
 		{% else %}
 		<span class="order-item-quantity">{{ item.quantity }}</span>
 		{% endif %}
@@ -52,12 +81,6 @@
 		</span>
 	</div>
 
-	<div class="col-xs-1">
-		{% if edit is defined and edit %}
-		<a class="btn btn-danger" href="{{ path('maci_order_remove_cart_item', {'id': id}) }}">{{ 'form.remove' | matra('Remove') }}</a>
-		{% endif %}
-	</div>
-
 </div>
 
 {% endfor %}
@@ -65,20 +88,20 @@
 
 <div class="row">
 
-	<div class="col-xs-6">
+	<div class="col-xs-3">
 		&nbsp;
 	</div>
 
 	<div class="col-xs-3">
+		&nbsp;
+	</div>
+
+	<div class="col-xs-4">
 		<span class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</span>
 	</div>
 
 	<div class="col-xs-2">
 		<span class="order-amount-value">{{ order.amount }} &euro;</span>
-	</div>
-
-	<div class="col-xs-1">
-		&nbsp;
 	</div>
 
 </div>
