--- a/Resources/views/Default/_order_payment.html.twig
+++ b/Resources/views/Default/_order_payment.html.twig
@@ -1,5 +1,5 @@
 
-<form class="maci_order_spedition" action="{{ path('maci_order_checkout_set_payment') }}" method="post">
+<form class="maci_order_payment" action="{{ path('maci_order_checkout_set_payment') }}" method="post">
 
 	<div class="form-group">
     	{{ form_errors(form) }}
