--- a/Resources/views/Default/cart.html.twig
+++ b/Resources/views/Default/cart.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 
-{% block content %}
+{% block container %}
 
 {% include "MaciOrderBundle:Default:_cart.html.twig" with { 'cart': cart } %}
 
