--- a/Resources/views/Default/_cart.html.twig
+++ b/Resources/views/Default/_cart.html.twig
@@ -5,10 +5,10 @@
 
 {% if cart and cart.items|length %}
 
-<div class="checkout-options">
+<div class="checkout-options row">
 
 	{% if cart.items|length < 4 %}
-	<div class="row">
+	<div class="col-xs-12 col-md-6">
 
 		<h3>{{ 'page.cart.pickup' | matra('Pickup In Store') }}</h3>
 		<p>{{ 'page.cart.pickup.description' | matra('Reserve the order and then get it in our store.') }}</p>
@@ -18,7 +18,7 @@
 	</div>
 	{% endif %}
 
-	<div class="row">
+	<div class="col-xs-12 col-md-6">
 
 		<h3>{{ 'page.cart.checkout' | matra('Checkout') }}</h3>
 		<p>{{ 'page.cart.checkout.description' | matra('Pay the order and get it at home.') }}</p>
