--- a/Resources/views/Email/confirmation_email.html.twig
+++ b/Resources/views/Email/confirmation_email.html.twig
@@ -36,7 +36,7 @@
 <table>
 	{% for item in order.items %}
 	<tr>
-		<td>{{ item }}</td>
+		<td>{{ item.product }}</td>
 		<td>
 			{% for variant in item.variants %}
 			{{ variant }}<br/>
