--- a/Resources/views/Default/_cart.html.twig
+++ b/Resources/views/Default/_cart.html.twig
@@ -5,27 +5,12 @@
 
 {% if cart and cart.items|length %}
 
-<div class="checkout-options row">
-
-	{% if cart.items|length < 4 %}
-	<div class="col-xs-12 col-md-6">
-
-		<h3>{{ 'page.cart.pickup' | matra('Pickup In Store') }}</h3>
-		<p>{{ 'page.cart.pickup.description' | matra('Reserve the order and then get it in our store.') }}</p>
-
-		{{ render(controller('MaciOrderBundle:Default:cartSetCheckout', {'checkout': 'pickup'})) }}
-
-	</div>
-	{% endif %}
-
-	<div class="col-xs-12 col-md-6">
+<div class="checkout-options">
 
 		<h3>{{ 'page.cart.checkout' | matra('Checkout') }}</h3>
 		<p>{{ 'page.cart.checkout.description' | matra('Pay the order and get it at home.') }}</p>
 
 		{{ render(controller('MaciOrderBundle:Default:cartSetCheckout')) }}
-
-	</div>
 
 </div>
 
