--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -17,7 +17,7 @@
 
 <div class="row">
 
-	<div class="col-xs-3">
+	<div class="col-xs-4">
 		<span class="order-show-title">{{ 'product.item_name' | matra('Product Name') }}</span>
 	</div>
 
@@ -29,12 +29,8 @@
 		<span class="order-show-title">{{ 'product.quantity' | matra('Quantity') }}</span>
 	</div>
 
-	<div class="col-xs-2">
-		<span class="order-show-title">{{ 'product.price' | matra('Price') }}</span>
-	</div>
-
 	<div class="col-xs-1">
-		&nbsp;
+		<span class="order-show-title">{{ 'product.price' | matra('Price') }}</span>
 	</div>
 
 </div>
@@ -50,7 +46,7 @@
 
 <div class="row">
 
-	<div class="col-xs-3">
+	<div class="col-xs-4">
 
 		{% if edit is defined and edit %}
 		<a class="order-item-name" href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
@@ -65,7 +61,11 @@
 	<div class="col-xs-3">
 
 		{% for variant in item.variants %}
+		{% if variant.parent %}
+		<span class="order-item-variant">{{ variant.parent }}: {{ variant }}</span><br/>
+		{% else %}
 		<span class="order-item-variant">- {{ variant }}</span><br/>
+		{% endif %}
 		{% endfor %}
 
 	</div>
@@ -79,9 +79,9 @@
 		{% endif %}
 	</div>
 
-	<div class="col-xs-2">
+	<div class="col-xs-1">
 		<span class="order-item-amount">
-			{{ item.amount }} &euro;
+			{{ item.amount | number_format(2, '.', ',') }} &euro;
 		</span>
 	</div>
 
@@ -92,20 +92,30 @@
 
 <div class="row">
 
-	<div class="col-xs-3">
+	<div class="col-xs-5">
 		&nbsp;
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
 		&nbsp;
 	</div>
+
+	{% if edit is defined and edit %}
+
+	<div class="col-xs-4">
+		<span class="order-amount-label">{{ 'order.subtotal' | matra('SubTotal') }}</span>
+	</div>
+
+	{% else %}
 
 	<div class="col-xs-4">
 		<span class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</span>
 	</div>
 
-	<div class="col-xs-2">
-		<span class="order-amount-value">{{ order.amount }} &euro;</span>
+	{% endif %}
+
+	<div class="col-xs-1">
+		<span class="order-amount-value">{{ order.amount | number_format(2, '.', ',') }} &euro;</span>
 	</div>
 
 </div>
